feat(PROBLEM6) : formsMap 생성하기
문자열을 2개씩 나누어 2자리 문자를 key, 해당 인덱스를 list로 하는 해쉬맵 생성